v17.1/4.产品特性/1.工作表/1.表单保护与锁定单元格.md
# celllock

SpreadJS 允许您保护锁定所有单元格的工作表并防止其他用户更改、移动或删除数据。 但是，您仍然可以从锁定的单元格中复制数据。
**isProtected** 选项可以设置 为 true 以保护工作表和[锁定](gcdocsite__documentlink?toc-item-id=64f05fd4-fafa-47dc-9856-b74263f357ec#locked)方法可用于锁定或解锁单元格。

### 解锁受保护工作表中的单元格

您可以通过将 **locked** 方法设置为False，允许用户编辑受保护工作表中的特定单元格。

```JavaScript
sheet.getCell(1,1, GC.Spread.Sheets.SheetArea.viewport).locked(false);
sheet.setValue(1,1,"unLocked");
sheet.getRange(-1,3, -1, 1).locked(false);
sheet.getRange(5, -1, 1, -1).locked(false);
sheet.options.isProtected = true;
```

### 在受保护的工作表中锁定一系列单元格

您可以按照以下步骤选择锁定受保护工作表中特定范围的单元格：

* 通过创建自定义样式并将 **locked** 方法设置为 False 来解锁所有单元格。
* 单独锁定您想要只读的单元格范围。

```JavaScript
// 配置工作簿和工作表
var spread = new GC.Spread.Sheets.Workbook("ss");
var sheet = spread.getActiveSheet();
// Unlock all the cells in the worksheet via the styles
let style = new GC.Spread.Sheets.Style();
style.locked = false;
// 将样式设置为工作表中所有单元格的默认样式
sheet.setDefaultStyle(style);
// 单独锁定你想只读的单元格范围
new GC.Spread.Sheets.CellRange(sheet, 0, 0, 13, 4).locked(true);
// 设置要保护的工作表
sheet.options.isProtected = true;
```

**options.protectionOptions** 属性可用于指定可以更改的区域。 这些区域可以包括调整大小、拖动、插入或删除行或列等。
**isProtected** 选项设置为true时，以下属性设置为True时生效：

| 特性 | 说明 |
| --- | --- |
| allowDragInsertRows | 允许您在插入行时执行拖动操作。 |
| allowDragInsertColumns | 允许您在插入列时执行拖动操作。 |
| allowInsertRows | 允许您插入行。 |
| allowInsertColumns | 允许您插入列。 |
| allowDeleteRows | 允许您删除行。 |
| allowDeleteColumns | 允许您删除列。 |
| allowSelectLockedCells | 允许您选择锁定的单元格。 |
| allowSelectUnlockedCells | 允许您选择未锁定的单元格。 |
| allowSort | 允许您对范围进行排序。 |
| allowFilter | 允许筛选范围。 |
| allowEditObjects | 允许您编辑浮动对象。 |
| allowResizeRows | 允许您调整行大小。 |
| allowResizeColumns | 允许您调整列的大小。 |
| allowOutlineRows | 允许您展开或折叠行组。 |
| allowOutlineColumns | 允许您展开或折叠列组。 |

当 **isProtected** 选项设置为false时，上述保护选项将不起作用。

### 在锁定的工作表中启用 保护选项

您可以保护工作表并启用 SpreadJS 中可用的各种保护选项。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
var sheet = spread.getActiveSheet();
sheet.options.isProtected = true;
sheet.options.protectionOptions.allowDeleteRows  = true;
sheet.options.protectionOptions.allowDeleteColumns = true;
sheet.options.protectionOptions.allowInsertRows = true;
sheet.options.protectionOptions.allowInsertColumns = true;
sheet.options.protectionOptions.allowDargInsertRows = true;
sheet.options.protectionOptions.allowDragInsertColumns = true;
```

> type=warning
> **注意:** 保护选项：allowInsertRows，allowInsertColumns，allowDeleteRows和allowDeleteColumns仅在用户界面上执行操作时可用。 换句话说，该值将仅限制上下文菜单中行和列的插入和删除命令。

### 为受保护组设置警告消息

默认情况下，您不能在受保护的工作表中展开或折叠大纲行或列组。 触发了 invalidOperation 事件，您还可以绑定该事件以显示警告消息，如下所示：

```JavaScript
// Set alert message
spread.bind(GC.Spread.Sheets.Events.InvalidOperation, (e, args) => {
    if(args.invalidType === GC.Spread.Sheets.InvalidOperationType.groupProtected){
    args.message="Expand or Collapse operation is not allowed for a protected worksheet.";
    alert(args.message)
    }
});
```

## 用密码保护工作表

**您可以选择在使用protect**方法保护工作表的同时设置密码。但是，在调用 protect 方法时，**isProtected**选项将自动设置为 true。

```javascript
//Protect the worksheet 
var password = 'AddedPassword'; 
activeSheet.protect(password); 
```

您可以通过将密码作为参数提供给**取消保护**方法来进一步取消对工作表的保护。

```javascript
//unprotect the worksheet with a password
if(activeSheet.hasPassword()) {
    activeSheet.unprotect(password);
} else {
    activeSheet.unprotect();
}
```

## 在受保护的工作表中隐藏公式

您可以使用 Style 类的 hidden 属性或 CellRange 类的 hidden 方法来控制受保护工作表中公式单元格的可见性。默认情况下，hidden 属性设置为 false，表示公式不会被隐藏。
此外，它还支持 SSJSON、SJS 和 XLSX 的导出和导入。
hidden 属性在某些情况下非常有用，比如根据员工自评和主管评估生成 KPI 数据或年终奖金时，雇主希望隐藏相关公式并保护评估系统。
以下代码示例展示了如何使用 GC.Spread.Sheets.Style 类型的 hidden 属性来隐藏单元格。

```javascript
// Sets whether the cell formula is visible when the sheet is protected.
activeSheet.options.isProtected = true;

// Create a style with hidden property true
var style = new GC.Spread.Sheets.Style();
style.hidden = true;
activeSheet.setStyle(1, 1, style, GC.Spread.Sheets.SheetArea.viewport);

// Apply style to a cell containing formula
activeSheet.setFormula(1, 1, "=SUM(1,2)");
```

或者，此代码示例使用 GC.Spread.Sheets.CellRange 类型中的隐藏方法

```javascript
// Sets whether the cell formula is visible when the sheet is protected.
activeSheet.options.isProtected = true;
activeSheet.setFormula(1, 3, "=SUM(10,20)");
activeSheet.getRange(1, 3, GC.Spread.Sheets.SheetArea.viewport).hidden(true);
```

以下 SpreadJS 功能受 hidden 属性的影响：

* 当单元格设置了 hidden 属性时，公式栏和公式编辑器面板不会显示任何公式。
* 当隐藏单元格处于编辑模式时，输入编辑器中的默认数据为空。
* 隐藏单元格不会复制公式，只复制结果，但剪切操作始终包含公式。
* 但是，您可以通过将 locked 属性设置为 true 来防止这种情况。
* showFormulas 属性不会显示隐藏单元格的公式。
* 如果 hidden 属性生效，FORMULATEXT() 方法无法获取单元格的公式。

请注意，hidden 和 locked 属性会互相影响其功能，如下表所示：

| 情况 | locked | hidden | 结果 |
| --- | ------ | ------ | --- |
| 工作表未受保护 | True/False | True/False | locked 和 hidden 都不会生效 |
| @rows=4:工作表受保护 | False | False | 单元格可编辑，公式正常显示 |
| True | True | 单元格被锁定，无法编辑，但公式显示正常 |
| False | False |  单元格可编辑，但公式被隐藏，在编辑模式下，输入框显示为空 |
| True | True | 单元格锁定，不可编辑，且公式被隐藏 |

限制：

* TableSheet、GanttSheet 和 ReportSheet 不支持 hidden 属性。
* 隐藏属性不会影响通过 API 访问的公式。

## 使用设计器

要访问“保护工作表”对话框，请通过右键单击选项卡条上显示的工作表名称导航到“保护工作表”选项。
**使用保护工作表对话框保护和取消保护工作表的步骤**

1. 输入密码以保护工作表，并从“保护工作表”对话框的可用选项列表中选中/取消选中多个选项。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/b33c4f64-6b99-4132-a675-8dc7b59765f1/image.01ef4e.png)
2. 当您输入密码以保护工作表时，另一个对话框会确认密码。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/b33c4f64-6b99-4132-a675-8dc7b59765f1/image.11480b.png)
3. 成功设置密码后，您可以访问受保护的工作表，但不能对工作表进行任何更改。要取消保护工作表，请使用“取消保护工作表”对话框输入设置的密码。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/b33c4f64-6b99-4132-a675-8dc7b59765f1/image.387e2b.png)